compiler/flux-lexer/src/snapshots/flux_lexer__tests__lex_float_addition.snap
---
source: compiler/flux-lexer/src/lib.rs
expression: s
---
[
    Token {
        kind: FloatLit,
        text: "1.02",
        range: 0..4,
    },
    Token {
        kind: Plus,
        text: "+",
        range: 4..5,
    },
    Token {
        kind: FloatLit,
        text: "2.40",
        range: 5..9,
    },
]
