compiler/flux-lexer/src/snapshots/flux_lexer__tests__lex_float_sep.snap
---
source: compiler/flux-lexer/src/lib.rs
expression: s
---
[
    Token {
        kind: FloatLit,
        text: "1.0_1",
        range: 0..5,
    },
]
