compiler/flux-lexer/src/snapshots/flux_lexer__tests__lex_prim_ty_in.snap
---
source: compiler/flux-lexer/src/lib.rs
expression: s
---
[
    Token {
        kind: INKw,
        text: "i54",
        range: 0..3,
    },
]
