compiler/flux-lexer/src/snapshots/flux_lexer__tests__lex_prim_ty_un.snap
---
source: compiler/flux-lexer/src/lib.rs
expression: s
---
[
    Token {
        kind: UNKw,
        text: "u54",
        range: 0..3,
    },
]
