compiler/flux-lexer/src/snapshots/flux_lexer__tests__parse_prim_ty_in.snap
---
source: flux-lexer/src/lib.rs
expression: s
---
[
    Token {
        kind: INKw,
        text: "i54",
        range: 0..3,
    },
]
