compiler/flux-lexer/src/snapshots/flux_lexer__tests__parse_prim_ty_un.snap
---
source: flux-lexer/src/lib.rs
expression: s
---
[
    Token {
        kind: UNKw,
        text: "u54",
        range: 0..3,
    },
]
